# django-drf-jwt

./: README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: django.yml  publish.yml
django_drf_jwt/: authentication.py  handlers.py  settings.py  tests.py  views.py
example/: requirements.txt
example/articles/: models.py  tests.py  urls.py  views.py
example/articles/migrations/: 0001_initial.py
example/django_drf_jwt/: apps.py  authentication.py  handlers.py  serializers.py  settings.py  tests.py  urls.py  views.py
example/example/: settings.py  urls.py
example/myuser/: admin.py  models.py
example/myuser/migrations/: 0001_initial.py
tests/: settings.py  test_api.py  urls.py
