[metadata]
name = django-drf-jwt
version = 0.1
description = A JWT authentication to django project
long_description = file: README.md
url = ""
author = Ivan Miletic
author_email = milemik68@gmail.com
license = MIT  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 5.0  # Replace "X.Y" as appropriate
    Framework :: Django :: 5.0  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.10
install_requires =
    PyJWT >= 2.8.0
    Django >= 3.2
    djangorestframework>=3.14
